--- a/alcs-frontend/src/app/features/application/lfng-info/lfng-info.component.html
+++ b/alcs-frontend/src/app/features/application/lfng-info/lfng-info.component.html
@@ -52,20 +52,16 @@
             <hr />
           </div>
           <div>
-            <div class="subheading2">Zoning Bylaw Name</div>
-            <div>{{ applicationReview.zoningBylawName }}</div>
+            <div class="subheading2">OCP Bylaw Name</div>
+            <div>{{ applicationReview.OCPBylawName }}</div>
           </div>
           <div>
-            <div class="subheading2">Zoning Designation</div>
-            <div>{{ applicationReview.zoningDesignation }}</div>
+            <div class="subheading2">OCP Designation</div>
+            <div>{{ applicationReview.OCPDesignation }}</div>
           </div>
           <div>
-            <div class="subheading2">Minimum Lot Size (hectares)</div>
-            <div>{{ applicationReview.zoningMinimumLotSize }}</div>
-          </div>
-          <div>
-            <div class="subheading2">Is this proposal consistent with the current zoning designation?</div>
-            <div>{{ applicationReview.isZoningConsistent ? 'Yes' : 'No' }}</div>
+            <div class="subheading2">Is this proposal consistent with the current OCP designation?</div>
+            <div>{{ applicationReview.OCPConsistent ? 'Yes' : 'No' }}</div>
           </div>
         </ng-container>
       </div>
