--- a/portal-frontend/src/app/features/review-application/review-submit-fng/review-submit-fng.component.html
+++ b/portal-frontend/src/app/features/review-application/review-submit-fng/review-submit-fng.component.html
@@ -220,7 +220,7 @@
   <div class="button-container">
     <button (click)="onExit()" mat-stroked-button color="accent">Save and Exit</button>
     <div>
-      <button mat-stroked-button matStepperPrevious color="primary">
+      <button mat-stroked-button color="primary" (click)="onNavigateToStep(currentStep - 1)">
         Previous<span class="mobile-hidden"> Step</span>
       </button>
       <button (click)="onSubmit()" mat-flat-button color="primary">Submit</button>
